# ptrash

./: .gitignore  Makefile.am  README  configure.ac  ptrash.1  ptrash.c  ptrash.h  ptrash.info  ptrash.texi  ptrashdb.c  ptrashdb.h  readme.ms  trashdb.c
